feat(search): create documentation for search endpoint
